--- a/dataCollection/spotifyAPI_1_1.ipynb
+++ b/dataCollection/spotifyAPI_1_1.ipynb
@@ -41,8 +41,10 @@
    "outputs": [],
    "source": [
     "# setting clinet id and secret \n",
-    "client_id = ''\n",
-    "client_secret = ''"
+    "import client_secret as cl\n",
+    "\n",
+    "client_id = cl.client_id\n",
+    "client_secret = cl.client_secret"
    ]
   },
   {
@@ -1263,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.5"
   },
   "orig_nbformat": 4
  },
